k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dragonqr
  namespace: dragon
  labels:
    app.kubernetes.io/name: dragonqr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dragonqr
  ports:
    - name: http
      port: 80
      targetPort: http
