k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dragonqr
  namespace: dragon
  labels:
    app.kubernetes.io/name: dragonqr
spec:
  rules:
    - host: dragon.northbriton.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dragonqr
                port:
                  name: http
